--- a/Test/github-repos/src/css/Repositories.css
+++ b/Test/github-repos/src/css/Repositories.css
@@ -6,7 +6,7 @@
   flex: 100;
   min-height: 100vh;
   margin-top: 5%;
-  color: white; /* Changed text color */
+  color: white; 
 }
 
 .search-filter-bar {
